# spz-cli

./: CMakeLists.txt  dockerfile  run_spzcli.bat  vcpkg.json
src/cc/: load-spz.cc  main.cc  splat-types.cc  splat-types.h
